add base configuration and temaplate html

--- a/template.html
+++ b/template.html
@@ -1,9 +1,24 @@
 <!doctype html>
 <html>
   <head>
-    <title>Webpack Package</title>
+    <title>RSS reader</title>
   </head>
   <body>
+    <main role="main" class="container pt-4">
+        <div class="jumbotron">
+          <h1>RSS reader</h1>
+          <div class="row">
+              <div class="col">
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="RSS feed" aria-label="RSS feed">
+                </div>
+              </div>
+              <div class="col-md-auto">
+                <a class="btn btn-primary" href="" role="button">Add RSS</a>
+              </div>
+          </div>
+        </div>
+    </main>
     <div id="point"></div>
   </body>
 </html>
